--- a/assets/style.css
+++ b/assets/style.css
@@ -1,121 +1,72 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
-
-*{
+body {
+    background-color: #ecf0f1;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
-    outline: none;
-    border: none;
-}
-
-body{
+  }
+  
+  .container {
+    margin: 100px auto;
+    width: 350px;
+    background-color: #ffffff;
+    border-radius: 10px;
+    padding: 30px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+  }
+  
+  .container h1 {
+    font-size: 36px;
+    text-align: center;
+    color: #6c5ce7;
+    margin-bottom: 20px;
+  }
+  
+  form {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background: linear-gradient(-45deg,#7f379b,#ffa26c);
-}
-
-.box{
-    width: 900px;
-    height: 400px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #fff;
-    box-shadow: 0 0 15px #00000033;
-    border-radius: 15px;
-    overflow: hidden;
-}
-
-.design{
-    width: 50%;
-    height: 100%;
-    position: relative;
-}
-
-.design div:first-child{
-    width: 190px;
-    height: 90px;
-    border-radius: 50px;
-    background: linear-gradient(-90deg,#7f379b,#ff6a85);
-    transform: rotate(45deg);
-    position: absolute;
-    top: -40px;
-    left: 120px;
-}
-
-.design div:nth-child(2){
-    width: 450px;
-    height: 230px;
-    border-radius: 200px;
-    background: linear-gradient(-90deg,#7f379b,#ff6a85);
-    transform: rotate(45deg);
-    position: absolute;
-    top: 0;
-    left: -163px;
-    border: 25px solid #e2c4e0;
-}
-
-.design div:nth-child(3){
-    width: 190px;
-    height: 70px;
-    border-radius: 50px;
-    background: linear-gradient(-90deg,#7f379b,#ff92a6);
-    transform: rotate(45deg);
-    position: absolute;
-    bottom: 70px;
-    left: -100px;
-}
-
-.design div:last-child{
-    width: 190px;
-    height: 70px;
-    border-radius: 50px;
-    background: linear-gradient(-90deg,#7f379b,#ffa26c);
-    transform: rotate(45deg);
-    position: absolute;
-    bottom: -50px;
-    left: 100px;
-}
-
-.form{
-    width: 50%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
-    padding: 0 75px;
-}
-
-.form h2{
-    margin-bottom: 15px;
-}
-
-.input-field{
+  }
+  
+  .form-input {
+    position: relative;
+    margin-bottom: 20px;
+  }
+  
+  .form-input input {
     width: 100%;
-    height: 40px;
+    padding: 10px;
+    font-size: 18px;
+    border: none;
+    background-color: #e6eaf0;
     border-radius: 5px;
-    margin: 10px 0;
-    padding: 15px;
-    font-size: 1em;
-    color: #000;
-    background-color: #e2c4e0;
-    letter-spacing: 1px;
-}
-.input-field::placeholder{
-    color: #303030;
-}
-
-.btn{
-    width: 100%;
-    height: 40px;
-    background-color: #7f379b;
-    color: #fff;
-    letter-spacing: 1px;
-    font-size: 1em;
-    margin-top: 15px;
+  }
+  
+  .form-input input:focus {
+    outline: none;
+    background-color: #f4f6fb;
+  }
+  
+  .btn {
+    background-color: #6c5ce7;
+    color: #ffffff;
+    font-size: 18px;
+    border: none;
     border-radius: 5px;
-}
+    padding: 10px;
+    cursor: pointer;
+  }
+  
+  .btn:hover {
+    background-color: #8c7ae6;
+  }
+  
+  .extra-info {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+  }
+  
+  .extra-info a {
+    color: #6c5ce7;
+    font-size: 16px;
+    text-decoration: none;
+  }
+  
