--- a/cadastro_files/welcome.css
+++ b/cadastro_files/welcome.css
@@ -1,55 +1,66 @@
 /* Global styles */
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f1f6fc;
+  font-family: Arial, sans-serif;
+  background-color: #f1f6fc;
+}
+
+.container {
+  width: 80%;
+  max-width: 800px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+h1 {
+  color: darkblue;
+  font-size: 3rem;
+}
+
+p {
+  color: #666;
+  font-size: 1.2rem;
+  margin-bottom: 2rem;
+}
+
+/* Animation styles */
+.animated-text {
+  display: inline-block;
+  position: relative;
+}
+
+.letter {
+  display: inline-block;
+  font-size: 5rem;
+  color: orange;
+  animation: animate 1s ease-in-out infinite alternate;
+}
+
+.letter:nth-child(2) {
+  animation-delay: 0.1s;
+}
+
+.letter:nth-child(3) {
+  animation-delay: 0.2s;
+}
+
+.letter:nth-child(4) {
+  animation-delay: 0.3s;
+}
+
+.letter:nth-child(5) {
+  animation-delay: 0.4s;
+}
+
+.letter:nth-child(6) {
+  animation-delay: 0.5s;
+}
+
+.letter:nth-child(7) {
+  animation-delay: 0.6s;
+}
+
+@keyframes animate {
+  to {
+    transform: translateY(-20%);
   }
-  
-  .container {
-    width: 80%;
-    max-width: 800px;
-    margin: 0 auto;
-    text-align: center;
-  }
-  
-  h1 {
-    color: #5e72e4;
-    font-size: 3rem;
-  }
-  
-  p {
-    color: #666;
-    font-size: 1.2rem;
-    margin-bottom: 2rem;
-  }
-  
-  /* Animation styles */
-  .animated-text {
-    display: inline-block;
-    position: relative;
-  }
-  
-  .letter {
-    display: inline-block;
-    font-size: 5rem;
-    color: #9b59b6;
-    animation: animate 1s ease-in-out infinite alternate;
-  }
-  
-  .letter:nth-child(2) {
-    animation-delay: 0.1s;
-  }
-  
-  .letter:nth-child(3) {
-    animation-delay: 0.2s;
-  }
-  
-  .letter:nth-child(4) {
-    animation-delay: 0.3s;
-  }
-  
-  @keyframes animate {
-    to {
-      transform: translateY(-20%);
-    }
-  }
-  
+}
